# wp-claude-monitor

./: README.md  pyproject.toml
src/wp_claude_monitor/: __init__.py  monitor.py
tests/: test_monitor.py
