[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wp-claude-monitor"
version = "0.1.0"
description = "Monitor WordPress posts and summarize content changes with Claude."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "VictorStackAI" }
]

[project.scripts]
wp-claude-monitor = "wp_claude_monitor.monitor:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
